<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context="com.example.yavor.bestbefore.AddProductActivity">
    <EditText
        android:id="@+id/add_product_field_barcode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_product_hint_barcode"
        android:inputType="number" />
    <EditText
        android:id="@+id/add_product_field_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_product_hint_name"
        android:inputType="text" />
    <EditText
        android:id="@+id/add_product_field_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_product_hint_type"
        android:inputType="text" />
    <EditText
        android:id="@+id/add_product_field_best_before"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_product_hint_best_before" />
    <Button
        android:id="@+id/add_product_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_product_button" />
</LinearLayout>

